--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
   margin: 0;
   font-family: 'Courier New', Courier, monospace;
-  background-color: #0d0d0d;
+  background-color: #000000;
   color: #fff;
   padding-top: 0;
 }
